--- a/colorgame.css
+++ b/colorgame.css
@@ -5,25 +5,26 @@
 body {
 
     background-color: rgb(50,50,50);
+    overflow-x:hidden;
+    overflow-y:hidden;
 
 }
 
+
 @media (max-width: 768px) {
-    h1{
-        font-size:3em;
-        line-height:1.1;
-    }
-    
+
     h2 {
-        font-size:1.5em;
-        line-height:1.1;
+        font-size:3.5em;
+        line-height:1.3;
     }
+
 }
 
 @media (min-width: 768px) {
-    h1{
-        font-size:5em;
-        line-height:1.1;
+
+    h2 {
+        font-size:5.5em;
+        line-height: 1.3;
     }
 }
 
@@ -38,12 +39,18 @@ body {
     color: white;
     padding: 0 10px;
 }
+
+.active {
+    background-color:rgb(78,119,206);
+    color:white;
+}
+
 .square {
     width: 30%;
     padding-bottom: 30%;
     margin: 1.66%;
     float:left;
-    background:cyan;
+    background:rgb(50,50,50);
     border-radius:25px;
 }
 
