--- a/colorgame.css
+++ b/colorgame.css
@@ -5,8 +5,8 @@
 body {
 
     background-color: rgb(50,50,50);
-    overflow-x:hidden;
     overflow-y:hidden;
+    width:100%
 
 }
 
@@ -14,7 +14,7 @@ body {
 @media (max-width: 768px) {
 
     h2 {
-        font-size:3.5em;
+        font-size:2.9em;
         line-height:1.3;
     }
 
